k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: telco-service
  namespace: telco

spec:
  selector:
    app: telco-app

  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080

  type: ClusterIP
